fix: remove commented-out styles in Collapse.scss for improved code clarity

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,101 +1,3 @@
- // best version
-
-/* .collapse-container {
-  position: relative;
-  margin-bottom: 13px;
-  width: 100%;
-  overflow: hidden;
-}
-
-.collapse__title {
-  position: relative;
-  padding: 8px 15px;
-  background-color: #ff6060;
-  color: white;
-  border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-  font-size: 13px;
-  z-index: 2;
-  margin-bottom: 10px;
-}
-
-.collapse__icon {
-  color: white;
-  transition: transform 150ms ease-in-out;
-  font-size: 18px;
-}
-
-.collapse__content {
-  position: relative;
-  background-color: #fbfbfb;
-  margin-top: -8px;
-  padding: 0 15px;
-  border-radius: 0 0 5px 5px;
-  z-index: 1;
-  transition: all 0.3s ease-in-out;
-  max-height: 0;
-  overflow: hidden;
-}
-
-.collapse__content ul {
-  display: block;
-}
-
-.collapse-container.expand .collapse__icon {
-  transform: rotate(180deg);
-}
-
-.collapse-container.expand .collapse__content {
-  max-height: 500px;
-  padding-top: 20px;
-  padding-bottom: 15px;
-  margin-top: -10px;
-}
-
-@media (min-width: 769px) and (max-width: 1440px) {
-  .about__collapse {
-    margin: 0 50px;
-  }
-
-  .collapse-container {
-    border-radius: 10px;
-  }
-  
-  .collapse__title {
-    border-radius: 10px;
-    font-size: 24px;
-    padding: 17px 15px;
-  }
-  
-  .collapse__icon {
-    font-size: 24px;
-    padding-right: 5px;
-  }
-  
-  .collapse__content {
-    margin-top: -10px;
-    border-radius: 0 0 10px 10px;
-    padding: 0 20px;
-  }
-  
-  .collapse-container.expand .collapse__content {
-    padding-top: 30px;
-    padding-bottom: 20px;
-  }
-} */
-
-
-
-
-
-
-
-
-
-//claude 
 .collapse-container {
   position: relative;
   margin-bottom: 13px;
